# back_to_back

./: .envrc  .gitignore  .mcp.json  .npmrc  LICENSE  USAGE.md  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  python.nix  rename_project.py  test_client.html  test_simple.py  test_websocket_client.py
docs/: backend_implementation_ai.md  backend_plan_ai.md  backend_techstack_ai.md  integration_plan.md  our_ai_roast_system.md  speech-to-text.md
faces-zakir/: package-lock.json  package.json
faces-zakir/src/: App.css  App.js  useAudioAnalysis.js
nix/: apps.nix  checks.nix  packages.nix  shells.nix  uv.nix
src/back_to_back/: __init__.py  app.py  basic_test.py  config.py  dependencies.py  main.py  models.py  roast_battle.py  roast_battle_v2.py  server.py
src/back_to_back/audio/: audio_services.py
src/back_to_back/core/: __init__.py  conversation_engine.py
src/back_to_back/routers/: audio.py  chat.py  health.py  websocket.py
src/back_to_back/services/: agent_flow.py  conversation.py  llm.py  session.py  tts.py
src/services/speech/: deepgram.js  index.js  microphone.js  speechToText.js
test/: simple-server.js  simple-test.html  speech-test.html  step1-basic-test.html  step2-microphone-test.html
tests/: __init__.py  test_api.py
